syntax = "proto3";
package chain4energy.cfeev.cfeev;

option go_package = "github.com/chain4energy/cfeev/x/cfeev/types";

message EnergyTransferCreatedEvent {
  uint64 energyTransferId = 1; 
  string chargerId = 2; 
  int32 energyAmountToTransfer = 3; 
  string action = 4;
}